mejoras de diseño de selector

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 #base de datos
 db_tickets.db
 .db
+db_tickets
 
 # Directorios de subida de archivos
 uploads/
@@ -24,7 +25,6 @@ venv/
 # Configuración del editor/IDE
 .vscode/
 .idea/
-
 
 # Sistema operativo
 .DS_Store
